Elimina archivo de migración grande y actualiza .gitignore
- Elimina migration_package_20250823_230840.tar.gz (589MB)
- Actualiza .gitignore para excluir migration_package_*.tar.gz
- Prepara repositorio para GitHub sin archivos grandes

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ backups/*.tar.gz
 backups/*.sql.gz
 backups/*.sql
 migration_backup_*/
+migration_package_*.tar.gz
 odoo14-migration.tar.gz
 
 # Archivos temporales
