Actualiza la variable de entorno POSTGRES_DB en environment.env, cambiando su valor de 'odoo' a 'postgres' para mejorar la configuración de la base de datos en Odoo 14 con Docker Compose.

--- a/environment.env
+++ b/environment.env
@@ -1,7 +1,7 @@
 # Variables de entorno para Odoo 14 con Docker Compose
 
 # Configuración de PostgreSQL
-POSTGRES_DB=odoo
+POSTGRES_DB=postgres
 POSTGRES_USER=odoo
 POSTGRES_PASSWORD=MultiAcceso2024!SecureDB#VPS
 
